==2011-04==
* Improved the default emulation fallback, the template chooser is now displayed
* Fixed audio playback play position
* Fixed canvas window orderOut
* Fixed frame size initialization
* Fixed OpenGL thread sync
* Fixed system events in canvas and emulation windows
* Fixed canvas API, so one can now post frames from the update callback
* Added support for storing default emulation window size
* Implemented persistance with render buffers
* Fixed problem when rendering on large screens
* Implemented power/pause/capture bezel
* Implemented Enable OpenGL shader preferences setting
* Implemented a warning message when replacing a disk image in a locked storage device
* Finished storage refactoring
* Added device component
* Refactored storage framework
* Removed OEComponent delegate infrastructure
* Added OEComponent update() call after re-configuration
* Removed OEComponent observer helpers

==2011-03==
* Stabilized video API
* Fixed variable names
* Fixed OpenGL thread nastiness
* Tested persistence with OpenGL accumulation buffer. No way.
* Improved shadow mask

==2011-02==
* Implemented shader shadow mask/aperture grille
* Implemented render to texture by parts
* Separated shader programs into: RGB, NTSC, PAL and screen programs
* Implemented Y'IQ decoding with I 1.3 MHz bandwidth and Q 0.6 MHz bandwidth
* Implemented composite phase per scan-line for NTSC/PAL
* Implemented removable device property
* Implemented system events. Each devices registers itself. An emulation gets these events and delegates them.
* Implemented shader center lighting 
* Fixed Document initialization problem
* Implemented monochrome shader decoder
* Implemented RGB decoder
* Improved canvas configuration
* Optimized shader

==2011-01==
* Fixed shader white IRE level
* Added shader scanlines
* Fixed vertical and horizontal centers
* Moved barrel center from content center to canvas center
* Implemented shader brightness clear color
* Implemented OpenGL 2.0 shader